--- a/NLP_Yelp_Project.ipynb
+++ b/NLP_Yelp_Project.ipynb
@@ -81,15 +81,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2B4C_dqsyDHB"
-      },
-      "source": [
-        "** Check the head, info , and describe methods on yelp.**"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -1696,6 +1687,7 @@
     "colab": {
       "name": "NLP Yelp Project.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
